<resources>
    <string name="app_name">Movies</string>
    <string name="activity_title_reviews">Reviews</string>

    <string name="activity_main_sort">Sort</string>
    <string name="activity_main_sort_popular">Popular</string>
    <string name="activity_main_sort_top_rated">Top Rated</string>
    <string name="activity_main_sort_favourite">Favourites</string>

    <string name="con_desc_movie_poster">Movie Poster</string>
    <string name="con_desc_movie_backdrop">Movie Backdrop</string>
    <string name="con_desc_not_connected_internet">@string/text_not_connected_internet</string>
    <string name="con_desc_movie_video">Movie Video</string>
    <string name="con_desc_play_button">Play button</string>

    <string name="text_loading_movies">Loading movies…</string>
    <string name="text_not_connected_internet">Not connected to the Internet!</string>
    <string name="text_recheck">Recheck</string>
    <string name="text_retry">Retry</string>
    <string name="text_add_to_favourites">Add to Favourites</string>
    <string name="text_remove_from_favourites">Remove from Favourites</string>
    <string name="text_read_reviews">Read Reviews</string>

    <string name="label_videos">Videos:</string>

    <string name="error_network_request_failure">Network request failed!</string>
</resources>
