<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.redridgeapps.movies.model.tmdb.Movie" />

        <variable
            name="movieDetail"
            type="com.redridgeapps.movies.model.tmdb.MovieDetail" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/top_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/large_margin"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/large_margin"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="@dimen/large_margin" />

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="@dimen/default_movie_poster_width"
                android:layout_height="@dimen/default_movie_poster_height"
                android:contentDescription="@string/con_desc_movie_poster"
                android:scaleType="fitXY"
                app:imageUrl="@{movie.getPosterURL()}"
                app:error="@{@drawable/poster_error}"
                app:placeholder="@{@drawable/poster_placeholder}"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toTopOf="@+id/top_guideline"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/movie_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:text="@{movie.getTitle()}"
                app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/top_guideline"
                tools:text="Avengers: Infinity War" />

            <TextView
                android:id="@+id/movie_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@{movie.getSimpleReleaseDate()}"
                app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_title"
                tools:text="Apr 25, 2018" />

            <RatingBar
                android:id="@+id/movie_rating"
                style="?android:ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:isIndicator="true"
                android:numStars="10"
                android:rating="@{(float) movie.getVoteAverage()}"
                android:stepSize="0.1"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_release"
                tools:rating="7.5" />

            <Button
                android:id="@+id/bt_favourite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@string/text_add_to_favourites"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                app:layout_constraintStart_toEndOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_rating" />

            <TextView
                android:id="@+id/movie_description"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@{movie.getOverview()}"
                app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/label_videos"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@string/label_videos"
                app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/movie_description" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin"
                app:layout_constraintEnd_toEndOf="@+id/end_guideline"
                app:layout_constraintStart_toStartOf="@+id/start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/label_videos" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>